--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
         <div class="settings">
           <p class="pw-length-text">Password length</p>
           <div class="pw-length-setter">
-            <button class="btn btn-small btn-setter">-</button>
-            <p class="pw-length">10</p>
-            <button class="btn btn-small btn-setter">+</button>
+            <button id="decrease" class="btn btn-small btn-setter">-</button>
+            <p class="pw-length">8</p>
+            <button id="increase" class="btn btn-small btn-setter">+</button>
           </div>
           <div class="checkbox-container">
-            <label for="symbol">
+            <label for="symbols">
               <input
                 class="checkBox"
                 type="checkbox"
                 name=""
-                id="symbol"
+                id="symbols"
                 checked
               />
               Symbols
             </label>
-            <label for="number">
+            <label for="numbers">
               <input
                 class="checkBox"
                 type="checkbox"
                 name=""
-                id="number"
+                id="numbers"
                 checked
               />
               Numbers
@@ -51,8 +51,8 @@
           Generate passwords
         </button>
         <div class="btn-container">
-          <button class="btn btn-large btn-pw">egxWij@veiPUwK</button>
-          <button class="btn btn-large btn-pw">egxWij@veiPUwK</button>
+          <button id="pw-1" class="btn btn-large btn-pw"></button>
+          <button id="pw-2" class="btn btn-large btn-pw"></button>
         </div>
       </div>
     </div>
